<resources>
    <string name="app_name">Github User App</string>

    <string name="name">Muhammad Hemas Julang Arrasy</string>
    <string name="hint_searchbar">Search User</string>
    <string name="username">hemasja</string>
    <string name="user_detail">Detail User</string>
    <string name="back_btn">Kembali</string>
    <string name="followers_num">200 Followers</string>
    <string name="following_num">135 Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fav_btn">Favorite Button</string>
    <string name="favorite">Favorite</string>

</resources>